--- a/study-brew/styles/Home.module.css
+++ b/study-brew/styles/Home.module.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@600;700&display=swap");
 
 .hero {
-  background-image: url("../public/hero1.png");
+  background-image: url("/hero1.png");
   background-position: center;
   min-height: 548px;
   font-family: "Inknut Antiqua", serif;
