--- a/study-brew/styles/Home.module.css
+++ b/study-brew/styles/Home.module.css
@@ -111,3 +111,68 @@
     box-sizing: border-box;
   }
 }
+
+.menu {
+  background-color: #5d1d0c;
+}
+
+.menu h1 {
+  font-size: 50px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.cardsContainer {
+  padding-bottom: 45px;
+}
+
+.card {
+  overflow: visible;
+  margin-top: 125px;
+  width: 330px;
+  background-color: #cbb293;
+  padding-bottom: 30px;
+}
+
+.cardHeader {
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.cardHeader img {
+  border-radius: 50%;
+  margin-top: -125px;
+}
+
+.cardBody {
+  margin-top: 20px;
+  text-align: center;
+  display: flex;
+  gap: 15px;
+}
+
+.cardBody h3 {
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 33px;
+  color: #18250b;
+}
+.cardBody p {
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+}
+
+.cardBody p:nth-child(3) {
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.cardBody p:nth-child(4) {
+  font-size: 20px;
+  line-height: 24px;
+  color: #18250b;
+  text-decoration: underline;
+  font-weight: 800;
+}
