--- a/study-brew/styles/globals.css
+++ b/study-brew/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@600;700&family=Patua+One&family=Poppins:wght@300;400;500;600;700&family=Reem+Kufi+Fun&display=swap");
 
 body {
   font-family: "Poppins", sans-serif;
