Add index prop to Press component

--- a/study-brew/components/Press/Press.module.css
+++ b/study-brew/components/Press/Press.module.css
@@ -2,6 +2,11 @@
   display: flex;
   justify-content: space-between;
   margin-top: 60px;
+  gap: 30px;
+}
+
+.flip {
+  flex-direction: row-reverse;
 }
 
 .text {
