--- a/study-brew/styles/globals.css
+++ b/study-brew/styles/globals.css
@@ -4,6 +4,11 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@600;700&family=Patua+One&family=Poppins:wght@300;400;500;600;700&family=Reem+Kufi+Fun&display=swap");
 
+:root {
+  --nav-height: 170px;
+  --footer-height: 311px;
+}
+
 body {
   font-family: "Poppins", sans-serif;
   background-color: #e1dcc9;
