Add privacy h2 style

--- a/study-brew/styles/Privacy.module.css
+++ b/study-brew/styles/Privacy.module.css
@@ -8,6 +8,11 @@
   margin-bottom: 20px;
 }
 
+.privacy h2 {
+  font-size: 24px;
+  margin-bottom: 5px;
+}
+
 .privacy p {
   margin-bottom: 10px;
 }
