--- a/study-brew/styles/Home.module.css
+++ b/study-brew/styles/Home.module.css
@@ -59,7 +59,8 @@
   display: flex;
   gap: 22px;
   align-items: center;
-  padding: 30px 0;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .readmoreImage {
