Update card containers styles

--- a/study-brew/styles/globals.css
+++ b/study-brew/styles/globals.css
@@ -20,6 +20,10 @@ body {
   padding: 0 70px;
 }
 
+.content-box {
+  max-width: calc(1472px + 140px);
+}
+
 @media screen and (max-width: 768px) {
   .container {
     padding: 0 30px;
