--- a/study-brew/styles/About.module.css
+++ b/study-brew/styles/About.module.css
@@ -66,3 +66,9 @@
   padding-top: 113px;
   padding-bottom: 92px;
 }
+
+@media only screen and (max-width: 768px) {
+  .press img {
+    display: none;
+  }
+}
