--- a/study-brew/components/Title/Title.module.css
+++ b/study-brew/components/Title/Title.module.css
@@ -17,3 +17,13 @@
   height: 5px;
   background-color: #18250b;
 }
+
+@media only screen and (max-width: 768px) {
+  .title h1 {
+    font-size: 30px;
+    padding: 0 5%;
+  }
+  .line {
+    height: 3px;
+  }
+}
