Add responsive styling for value section

--- a/study-brew/styles/About.module.css
+++ b/study-brew/styles/About.module.css
@@ -61,6 +61,12 @@
   align-self: center;
 }
 
+@media only screen and (max-width: 768px) {
+  .value img {
+    display: none;
+  }
+}
+
 .press {
   background-color: white;
   padding-top: 113px;
