--- a/study-brew/styles/About.module.css
+++ b/study-brew/styles/About.module.css
@@ -59,6 +59,13 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .aboutus,
+  .mission,
+  .value,
+  .press {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
   .aboutContent img,
   .value img,
   .press img {
