--- a/study-brew/styles/About.module.css
+++ b/study-brew/styles/About.module.css
@@ -52,6 +52,11 @@
   align-self: center;
 }
 
+.value p {
+  font-size: 20px;
+  font-weight: 300;
+}
+
 .press {
   background-color: white;
   padding-top: 113px;
