--- a/study-brew/components/MenuCard/MenuCard.module.css
+++ b/study-brew/components/MenuCard/MenuCard.module.css
@@ -23,6 +23,7 @@
   text-align: center;
   display: flex;
   gap: 15px;
+  justify-content: space-between;
 }
 
 .cardBody h2 {
@@ -37,12 +38,12 @@
   line-height: 27px;
 }
 
-.cardBody p:nth-child(3) {
+.cardBody div:nth-child(2) p:nth-child(1) {
   font-size: 20px;
   line-height: 30px;
 }
 
-.cardBody p:nth-child(4) {
+.cardBody div:nth-child(2) p:nth-child(2) {
   font-size: 20px;
   line-height: 24px;
   color: #18250b;
